v8.17

  * render-judgment-form and judgment-form->pict are functions, making
    them suitable to abstract over (before, they required their
    arguments to be identifiers bound to judgment forms)

v8.16

  * bug fixes

v8.15

  no changes since 8.14

v8.14

  * bug fix

v8.13

  * bug fix

v8.12

  * documentation improvements

v8.11

  * added `redex-define` and `term-define`, thanks to Shu-Hung You

  * documentation fixes

v8.10

  * added judgment-form->rule-names

  * unbreak traces/ps

v8.9

  * bug fix

v8.8

  * improved typesetting support when customized renders are used in
    certain multi-line situations. Thanks to Shu-Hung You for
    suggesting the fix.

  * fixed more bugs in randomized testing for delimited continuations

v8.7

  * fixed bugs in randomized testing for delimited continuations

v8.6

  * added support for simultaneous substitutions, thanks to Phil Nguyen

  * bug fixes

v8.5

  * added the #:error-on-multiple? argument to apply-reduction-relation*

  * bug fixes

v8.4

  * bug fix

v8.3

  * improve the stepper for IO judgment forms

  * bug fixes

v8.2

  * bug fixes

v8.1

  * bug fixes and a documentation improvement

v8.0

  * added define-overriding-judgment-form

  * improved source location reporting for test- forms

v7.9

  * added language-make-::=-pict

  * misc bug fixes

v7.8

  * change the typesetting of `(in-hole E hole)`
    from something like E to something like E[].

  * bug fixes

v7.7

  * change modeless judgment forms to check for moded subderivations
    (instead of synthesizing them itself)

  * generalize typesetting to accept pict-convertibles, not just picts

  * bug fixes

v7.6

  * bug fixes

v7.5

  * add modeless judgment forms
  * relicense under Apache v2 and MIT licenses
  * add test-match and test-no-match
  * bug fixes

v7.4

  * added default-relation-clause-combine and relation-clause-combine

  * bug fixes and documentation improvements

v7.3

  * added compatible-closure-context

v7.2
